feat: change the refresh token to be used only by cookie instead of returning it from client
